ligin duplicate ids

--- a/Login.html
+++ b/Login.html
@@ -68,15 +68,15 @@
 
             <div class="create_acount">
               <h1>Skapa konto</h1>
-              <label for="myFirstName"> First Name:</label>
+              <form action="/action_page.php">
                 <label for="username">Användarnamn:</label>
                 <input id="username" type="text" name="username" required="required" placeholder="Ditt användarnamn...">
             
                 <label for="email">E-Post:</label>
-                <input id="email" type="text" name="email" required="required" placeholder="Din e-post...">
+                <input id="new_email" type="text" name="email" required="required" placeholder="Din e-post...">
 
                 <label for="pasword">Lösenord:</label>
-                <input id="pasword" type="text" name="pasword" required="required" placeholder="Ditt lösenord..">
+                <input id="new_pasword" type="text" name="pasword" required="required" placeholder="Ditt lösenord..">
             
                 <label for="confirm_pasword">Bekräfta lösenord:</label>
                 <input id="confirm_pasword" type="text" name="confirm_pasword" required="required" placeholder="Ditt lösenord..">
