--- a/Categories.html
+++ b/Categories.html
@@ -38,7 +38,7 @@
           <ul>
             <li><a href = "URL">Sök</a></li>
             <li><a href = "Products.html">Alla spel</a></li>
-            <li class="active"><a href = "Categories.html">Kategorier</a></li>
+            <li><a class="active" href = "Categories.html">Kategorier</a></li>
             <li><a href = "Forum.html">Forum</a></li>
             <li><a href = "URL">Låna</a></li>
             <li><a href = "URL">Loppis</a></li>
