--- a/Forum.html
+++ b/Forum.html
@@ -40,7 +40,7 @@
                 <li><a href = "URL">Sök</a></li>
                 <li><a href = "Products.html">Alla spel</a></li>
                 <li><a href = "Categories.html">Kategorier</a></li>
-                <li class="active"><a href = "Forum.html">Forum</a></li>
+                <li><a class="active" href = "Forum.html">Forum</a></li>
                 <li><a href = "URL">Låna</a></li>
                 <li><a href = "URL">Loppis</a></li>
                 <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
