--- a/Login.html
+++ b/Login.html
@@ -44,7 +44,7 @@
                 <li><a href = "URL">Låna</a></li>
                 <li><a href = "URL">Loppis</a></li>
                 <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
-                <li class="active"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
+                <li><a class="active" href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
                 <li><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
               </ul>
             </nav>
