--- a/Products.html
+++ b/Products.html
@@ -37,7 +37,7 @@
         <nav class="menu_responsive">
           <ul>
             <li><a href = "URL">Sök</a></li>
-            <li class="active"><a href = "Products.html">Alla spel</a></li>
+            <li><a class="active" href = "Products.html">Alla spel</a></li>
             <li><a href = "Categories.html">Kategorier</a></li>
             <li><a href = "Forum.html">Forum</a></li>
             <li><a href = "URL">Låna</a></li>
