--- a/Categories.html
+++ b/Categories.html
@@ -17,7 +17,7 @@
           <figure id="logo"><a href = "index.html"><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
           <div id="quick_link">
               <div class="icon"><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
-              <div class="icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
+              <div class="l_icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
               <div class="icon"><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
           </div>
         </header>
@@ -28,8 +28,6 @@
             <li><a href = "Products.html">Alla spel</a></li>
             <li class="active"><a href = "Categories.html">Kategorier</a></li>
             <li><a href = "Forum.html">Forum</a></li>
-            <li><a href = "URL">Låna</a></li>
-            <li><a href = "URL">Loppis</a></li>
             <li id="search"><a href = "URL">Sök</a></li>
           </ul>
         </nav>
@@ -40,8 +38,6 @@
             <li><a href = "Products.html">Alla spel</a></li>
             <li><a class="active" href = "Categories.html">Kategorier</a></li>
             <li><a href = "Forum.html">Forum</a></li>
-            <li><a href = "URL">Låna</a></li>
-            <li><a href = "URL">Loppis</a></li>
             <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
             <li><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
             <li><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
