--- a/Login.html
+++ b/Login.html
@@ -29,8 +29,6 @@
                   <li><a href = "Products.html">Alla spel</a></li>
                   <li><a href = "Categories.html">Kategorier</a></li>
                   <li><a href = "Forum.html">Forum</a></li>
-                  <li><a href = "URL">Låna</a></li>
-                  <li><a href = "URL">Loppis</a></li>
                   <li id="search"><a href = "URL">Sök</a></li>
                 </ul>
             </nav>
@@ -41,8 +39,6 @@
                 <li><a href = "Products.html">Alla spel</a></li>
                 <li><a href = "Categories.html">Kategorier</a></li>
                 <li><a href = "Forum.html">Forum</a></li>
-                <li><a href = "URL">Låna</a></li>
-                <li><a href = "URL">Loppis</a></li>
                 <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
                 <li><a class="active" href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
                 <li><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
@@ -61,7 +57,7 @@
                 <label for="pasword">Lösenord:</label>
                 <input id="pasword" type="text" name="pasword" required="required" placeholder="Ditt lösenord..">
               
-                <input type="submit" value="Submit">
+                <input type="submit" value="Logga in">
               </form>
             </div>
 
@@ -81,7 +77,7 @@
                 <label for="confirm_pasword">Bekräfta lösenord:</label>
                 <input id="confirm_pasword" type="text" name="confirm_pasword" required="required" placeholder="Ditt lösenord..">
               
-                <input type="submit" value="Submit">
+                <input type="submit" value="Registrera">
               </form>
             </div>
             <!-- FOOTER -->
