--- a/Forum.html
+++ b/Forum.html
@@ -177,8 +177,11 @@
 
             <!-- FOOTER -->
             <footer class="footer">
-              <div class="footer_info">bottom text</div>
-              <br>
+              <div class="footer_info">
+                <a target="_blank" href="https://www.google.com/maps/place/Worldofboardgames.com/@63.8482097,20.3114261,15z/data=!4m2!3m1!1s0x0:0xc047bbd27173880b?sa=X&ved=2ahUKEwjF4LnVm6T9AhXL6CoKHWpSAYYQ_BJ6BAhxEAg">Hitta oss!</a>
+                <br><a target="_blank" href="https://www.facebook.com/worldofboardgames/">Följ oss!</a>
+                <br><a target="_blank" href="https://www.worldofboardgames.com/om_oss.php">Kontakat oss!</a>
+              </div>
             </footer>
   
             
