--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,7 @@
         <meta name="author" content="Tuva Falk">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="Global.css">   
+        <script src="main.js"></script>
     </head>
    
     <body>
@@ -17,33 +18,27 @@
             <header class="header">
               <figure id="logo"><a href = "index.html"><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
               <div id="quick_link">
-                <div class="icon"><a href = "https://www.google.com/maps/place/Worldofboardgames.com/@63.8482097,20.3114261,15z/data=!4m2!3m1!1s0x0:0xc047bbd27173880b?sa=X&ved=2ahUKEwjF4LnVm6T9AhXL6CoKHWpSAYYQ_BJ6BAhxEAg"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></div>
-                <div class="a_icon"><a href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></div>
-                <div class="icon"><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></div>
+                <a target="_blank" href = "https://www.google.com/maps/place/Worldofboardgames.com/@63.8482097,20.3114261,15z/data=!4m2!3m1!1s0x0:0xc047bbd27173880b?sa=X&ved=2ahUKEwjF4LnVm6T9AhXL6CoKHWpSAYYQ_BJ6BAhxEAg"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a>
+                <a href = "login.html" class="active"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a>
+                <a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a>
               </div>
             </header>
 
             <!-- NAVIGATION -->
-            <nav class="menu">
-                <ul>
-                  <li><a href = "Products.html">Alla spel</a></li>
-                  <li><a href = "Categories.html">Kategorier</a></li>
-                  <li><a href = "Forum.html">Forum</a></li>
-                  <li id="search"><a href = "URL">Sök</a></li>
-                </ul>
-            </nav>
-
-            <nav class="menu_responsive">
-              <ul>
-                <li><a href = "URL">Sök</a></li>
-                <li><a href = "Products.html">Alla spel</a></li>
-                <li><a href = "Categories.html">Kategorier</a></li>
-                <li><a href = "Forum.html">Forum</a></li>
-                <li><a href = "URL"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a></li>
-                <li><a class="active" href = "Login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a></li>
-                <li><a href = "URL"><i class="cart"><img src="src/cart.svg" alt="din kundvagn"></i></a></li>
-              </ul>
-            </nav>
+            <div class="menu" id="myMenu">
+              <a href="index.html">Hem</a>
+              <a href="products.html">Alla Spel</a>
+              <a href="categories.html">Kategorier</a>
+              <a href="forum.html">Forum</a>
+              <a onclick="random_hex()">Ohhh...</a>
+              <a id="search">Sök</a>
+              
+              <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
+                <div class="bar" id="bar1"></div>
+                <div class="bar" id="bar2"></div>
+                <div class="bar" id="bar3"></div>
+              </a>
+            </div>
 
             <!-- CONTENT -->
             <!-- TOPLIST -->
