alla byter färg

--- a/Categories.html
+++ b/Categories.html
@@ -29,7 +29,7 @@
           <a href="products.html">Alla Spel</a>
           <a href="categories.html" class="active">Kategorier</a>
           <a href="forum.html">Forum</a>
-          <a onclick="random_hex()">Ohhh...</a>
+          <a onclick="random_hex()">Rave</a>
           <a id="search">Sök</a>
 
           <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
