--- a/Forum.html
+++ b/Forum.html
@@ -30,7 +30,7 @@
               <a href="products.html">Alla Spel</a>
               <a href="categories.html">Kategorier</a>
               <a href="forum.html" class="active">Forum</a>
-              <a onclick="random_hex()">Ohhh...</a>
+              <a onclick="random_hex()">Rave</a>
               <a id="search">Sök</a>
               
               <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
@@ -42,7 +42,7 @@
 
 
             <!-- CONTENT -->
-            <table class="forum">
+            <table class="forum" id="change">
                 <tr>
                   <th>Forum</th>
                   <th>Ämne</th>
