--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,7 @@
               <a href="products.html">Alla Spel</a>
               <a href="categories.html">Kategorier</a>
               <a href="forum.html">Forum</a>
-              <a onclick="random_hex()">Ohhh...</a>
+              <a onclick="random_hex()">Rave</a>
               <a id="search">Sök</a>
               
               <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
@@ -42,8 +42,7 @@
 
             <!-- CONTENT -->
             <!-- TOPLIST -->
-
-            <div class="login">
+            <div class="login" id="change">
               <h1>Logga in</h1>
               <form action="/action_page.php">
                 <label for="email">E-Post:</label>
