--- a/Products.html
+++ b/Products.html
@@ -29,7 +29,7 @@
           <a href="products.html" class="active">Alla Spel</a>
           <a href="categories.html">Kategorier</a>
           <a href="forum.html">Forum</a>
-          <a onclick="random_hex()">Ohhh...</a>
+          <a onclick="random_hex()">Rave</a>
           <a id="search">Sök</a>
           
           <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
@@ -70,7 +70,7 @@
         </aside>
 
         <!-- PRODUCT DISPLAY -->
-        <div class="product_display">
+        <div class="product_display" id="change">
           <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="src/kat4.png"><img src="src/kat2.png" alt="kategori"></a>
