--- a/index.html
+++ b/index.html
@@ -183,6 +183,20 @@
             <div class="desc">Add a description of the image here</div>
           </div>
         </div>
+
+        <div class="responsive">
+          <div class="gallery">
+              <a target="_blank" href="src/kat4.png"><img src="src/kat5.png" alt="kategori"></a>
+              <div class="desc">Add a description of the image here</div>
+          </div>
+        </div>
+    
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="src/kat5.png"><img src="src/kat1.png" alt="kategori"></a>
+            <div class="desc">Add a description of the image here</div>
+          </div>
+        </div>
     
         <div class="clearfix"></div>
       </aside>
