--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <a href="categories.html">Kategorier</a>
         <a href="forum.html">Forum</a>
         <a onclick="random_hex()">Rave</a>
-        <a id="search">Sök</a>
-        
+        <a class="search"><input type="text" name="search" placeholder="Sök.."></a>
+
         <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
           <div class="bar" id="bar1"></div>
           <div class="bar" id="bar2"></div>
