--- a/products.html
+++ b/products.html
@@ -31,7 +31,7 @@
           <a href="categories.html">Kategorier</a>
           <a href="forum.html">Forum</a>
           <a onclick="random_hex()">Rave</a>
-          <a class="search"><input type="text" name="search" placeholder="Sök.."></a>
+          <div class="search"><input type="text" name="search" placeholder="Sök"></div>
 
           <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
             <div class="bar" id="bar1"></div>
