--- a/categories.html
+++ b/categories.html
@@ -30,9 +30,17 @@
           <a href="products.html">Alla Spel</a>
           <a href="categories.html" class="active">Kategorier</a>
           <a href="forum.html">Forum</a>
-          <a onclick="random_hex()">Rave</a>
+          <div class="dropdown">
+            <button onclick="dropdown()" class="dropbtn">Rave</button>
+            <div id="drop" class="dropdown-content">
+              <div onclick="random_hex()">Header</div>
+              <div onclick="random_hex()">Body</div>
+              <div onclick="random_hex()">Footer</div>
+            </div>
+          </div>
+
           <div class="search"><input type="text" name="search" placeholder="Sök"></div>
-          
+
           <a href="javascript:void(0);" class="icon" onclick="topnav_resp()">
             <div class="bar" id="bar1"></div>
             <div class="bar" id="bar2"></div>
