--- a/categories.html
+++ b/categories.html
@@ -49,14 +49,16 @@
           <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="src/kat4.png"><img src="src/kat1.png" alt="kategori"></a>
-                <div class="desc"><p>Barnspel</p></div>
+                <div class="desc" id="flip1"><p>Barnspel</p></div>
+                <div class="exp" id="panel1">Till barnspel räknar vi de spel som främst vänder sig till barn mellan 3 och 10 år. När man väljer spel för barn är det bra att tänka på några olika faktorer som tex speltid, barnens intressen, spelets möjlighet att utveckla olika färdigheter osv. Lämplig speltid beror på barnets förmåga att koncentrera sig.</div>
             </div>
           </div>
 
           <div class="responsive">
             <div class="gallery">
                 <a target="_blank" href="src/kat5.png"><img src="src/kat2.png" alt="kategori"></a>
-                <div class="desc"><p>Familjespel</p></div>
+                <div class="desc" id="flip2"><p>Familjespel</p></div>
+                <div class="exp" id="panel2">Familjespel är de spel vi tycker passar bra för hela familjen. Spel som är perfekta att ha med sig under semestrar, högtider eller en helg med släkt och vänner. Oftast kan man spela dessa spel från ungefär 7-8 år och uppåt.</div>
             </div>
           </div>
 
