--- a/forum.html
+++ b/forum.html
@@ -19,7 +19,7 @@
 
             <!-- HEADER -->
             <header class="header" id="header">
-              <figure id="logo"><a href = "index.html"><img src="src/logo.svg" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
+              <figure id="logo"><a href = "index.html"><img src="src/WorldofBoardGames.com.png" alt="world of board games logotyp" style="max-width:90%;height:auto;"></a></figure>
               <div id="quick_link">
                 <a target="_blank" href = "https://www.google.com/maps/place/Worldofboardgames.com/@63.8482097,20.3114261,15z/data=!4m2!3m1!1s0x0:0xc047bbd27173880b?sa=X&ved=2ahUKEwjF4LnVm6T9AhXL6CoKHWpSAYYQ_BJ6BAhxEAg"><i class="map"><img src="src/map.svg" alt="hitta till butiken"></i></a>
                 <a href = "login.html"><i class="knight"><img src="src/logg-in.svg" alt="logga in eller skapa konto"></i></a>
